--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(algodat_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(algodat_1 main.cpp HashTable.cpp)
+add_executable(algodat_1 main.cpp HashTable.cpp Entry.cpp asciiplotter.cpp Aktie.cpp)
